--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "npm install",
     "test": "ava tests/",
+    "test:watch": "npm test -- --watch",
     "lint": "eslint ./"
   },
   "keywords": ["redux", "redux-saga", "test"],
