--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "redux-saga-test-engine",
   "version": "1.1.0",
   "description": "Redux saga test helper",
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "main": "index.js",
   "repository": "DNAinfo/redux-saga-test-engine",
   "scripts": {
