--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,14 @@
+dependencies:
+  override:
+    - yarn
+  cache_directories:
+    - ~/.cache/yarn
+machine:
+  environment:
+    PATH: "${PATH}:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin"
+  node:
+    version: 6.0.0
 test:
   override:
     - nvm install stable && nvm alias default stable
-    - npm test
+    - yarn test
