--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-saga-test-engine",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Redux saga test helper",
   "engines": {
     "node": ">=6.0.0"
@@ -16,7 +16,11 @@
   "engine": {
     "node": ">=6.0.0"
   },
-  "keywords": ["redux", "redux-saga", "test"],
+  "keywords": [
+    "redux",
+    "redux-saga",
+    "test"
+  ],
   "author": "DNAinfo",
   "license": "MIT",
   "dependencies": {
