--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "ava tests/",
     "test:watch": "npm test -- --watch",
     "lint": "eslint ./",
-    "build": "rimraf lib && cross-env BABEL_ENV=es babel src -d build --ignore 'tests'",
+    "build": "rimraf build && cross-env BABEL_ENV=es babel src -d build --ignore 'tests'",
     "prepublish": "npm run build"
   },
   "engine": {
@@ -33,7 +33,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "cross-env": "^4.0.0",
     "eslint": "^3.13.0",
     "redux-saga": "^0.14.1",
