--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,7 @@
     "no-case-declarations": 0,
     "key-spacing": [1, {"mode": "minimum"}],
     "comma-spacing": ["error", { "before": false, "after": true }],
-    "comma-dangle": [1, "only-multiline"],
+    "comma-dangle": [1, "always-multiline"],
     "space-infix-ops": [1],
     "arrow-spacing": [1, { "before": true, "after": true }],
     "no-confusing-arrow": [2],
