Add 'production' to env preset listing in .babelrc

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
   "presets": [
       ["env", {
+        "production": {
           "targets": {
               "node": 4
           }
+        }
       }]
   ]
 }
