(m) Bring back engine key in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": ">=6.0.0"
   },
+  "engine": {
+    "node": ">=6.0.0"
+  },
   "main": "build/index.js",
   "repository": "DNAinfo/redux-saga-test-engine",
   "scripts": {
