Add prettier formatting

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,23 @@
 {
-  "extends": ["eslint:recommended"],
+  "extends": ["eslint:recommended", "prettier"],
   "env": {
     "browser": true,
     "node": true,
     "es6": true
   },
+  "plugins": ["prettier"],
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "printWidth": 100,
+        "tabWidth": 2,
+        "useTabs": false,
+        "semi": false,
+        "singleQuote": true,
+        "trailingComma": "es5"
+      }
+    ],
     "indent": ["error", 2, {"SwitchCase": 1}],
     "no-console": 1,
     "keyword-spacing": [2],
