--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "test:watch": "npm test -- --watch",
     "lint": "eslint ./src ./tests",
     "build": "rimraf build && cross-env BABEL_ENV=es babel src -d build --ignore 'tests'",
-    "prepublish": "npm run build"
+    "prettier": "prettier --print-width 100 --tab-width 2 --use-tabs false --semi false --single-quote true --trailing-comma es5 --write \"{sagas,src,tests}/**/*.js\"",
+    "prepublish": "npm run build",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run prettier",
+      "git add"
+    ]
   },
   "keywords": [
     "redux",
@@ -30,6 +38,11 @@
     "babel-preset-env": "^1.5.2",
     "cross-env": "^4.0.0",
     "eslint": "^3.13.0",
+    "eslint-config-prettier": "^2.4.0",
+    "eslint-plugin-prettier": "^2.2.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.1.3",
+    "prettier": "^1.6.1",
     "redux-saga": "^0.14.1",
     "rimraf": "^2.6.1"
   }
