--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "redux-saga-test-engine",
   "version": "2.1.0",
   "description": "Redux saga test helper",
+  "repository": "timbuckley/redux-saga-test-engine",
+  "author": "Tim Buckley",
+  "license": "MIT",
   "main": "build/index.js",
-  "repository": "DNAinfo/redux-saga-test-engine",
   "scripts": {
     "start": "npm install",
     "test": "ava tests/",
@@ -25,8 +27,6 @@
     "redux-saga",
     "test"
   ],
-  "author": "DNAinfo",
-  "license": "MIT",
   "dependencies": {
     "deep-equal": "^1.0.1"
   },
